--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,9 +29,19 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'publish'
+    command: publish
+    arguments: '--configuration Release --output publish_output'
+    projects: '*.csproj'
     publishWebProjects: false
-    projects: '**.*/csproj'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/**/*LearnerFunctions.zip'
-    arguments: '--no-restore --configuration Release -p:PublishDir=$(Build.ArtifactStagingDirectory)'
-
+    modifyOutputPath: true
+    zipAfterPublish: false
+- task: ArchiveFiles@2
+  displayName: "Archive files"
+  inputs:
+    rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output"
+    includeRootFolder: false
+    archiveFile: "$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip"
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
+    artifactName: 'drop'
