--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- master
+  batch: true
+  branches:
+    include:
+    - master
+    - release-*
+    - development
 
 pool:
   vmImage: 'windows-latest'
