updated pipeline and comment

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,10 @@ trigger:
   branches:
     include:
     - master
+    - hotfix/*
     - release-*
     - development
+    - feature/*
 
 pool:
   vmImage: 'windows-latest'
@@ -46,7 +48,21 @@ steps:
     rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output/s"
     includeRootFolder: false
     archiveFile: "$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip"
+ 
 - task: PublishBuildArtifacts@1
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
-    artifactName: 'drop'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/LiveFunctionApp$(Build.BuildId).zip'
+    artifactName: 'drop_live'
+
+- task: PublishBuildArtifacts@1
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/release-*'))
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/StagingFunctionApp$(Build.BuildId).zip'
+    artifactName: 'drop_staging'
+
+- task: PublishBuildArtifacts@1
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/development'))
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/DevFunctionApp$(Build.BuildId).zip'
+    ArtifactName: 'drop_development'
