--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,17 +52,17 @@ steps:
 - task: PublishBuildArtifacts@1
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/LiveFunctionApp$(Build.BuildId).zip'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
     artifactName: 'drop_live'
 
 - task: PublishBuildArtifacts@1
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/release-*'))
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/StagingFunctionApp$(Build.BuildId).zip'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
     artifactName: 'drop_staging'
 
 - task: PublishBuildArtifacts@1
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/development'))
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/DevFunctionApp$(Build.BuildId).zip'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
     ArtifactName: 'drop_development'
