updated pipeline with release configuration dependent on branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,9 +19,21 @@ pool:
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
 
 steps:
+
+- pwsh: |
+    If ("$(Build.SourceBranch)" -eq "refs/heads/develop") {
+      Write-Host "##vso[task.setvariable variable=buildConfiguration;]Debug"
+    } 
+    else
+    {
+        Write-Host "##vso[task.setvariable variable=buildConfiguration;]Release"
+    }
+
+- script: | 
+    echo building configuration $(buildConfiguration)
+
 - task: NuGetToolInstaller@1
 
 - task: DotNetCoreCLI@2
@@ -37,7 +49,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: publish
-    arguments: '--configuration Release --output publish_output'
+    arguments: '--configuration $(buildConfiguration) --output publish_output'
     projects: '*.csproj'
     publishWebProjects: false
     modifyOutputPath: true
