--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,16 +27,16 @@ steps:
     If ("$(Build.SourceBranch)" -eq "refs/heads/development") {
       Write-Host "##vso[task.setvariable variable=buildConfiguration;]Debug"
     }
-    If (contains("$(Build.SourceBranch)", "refs/heads/feature/")) {
+    If ("$(Build.SourceBranch)" -startsWith "refs/heads/feature/") {
       Write-Host "##vso[task.setvariable variable=buildConfiguration;]Debug"
     }
     If ("$(Build.SourceBranch)" -eq "refs/heads/master") {
       Write-Host "##vso[task.setvariable variable=buildConfiguration;]Release"
     }
-    If (contains("$(Build.SourceBranch)", "refs/heads/hotfix/")) {
+    If ("$(Build.SourceBranch)" -startsWith "refs/heads/hotfix/") {
       Write-Host "##vso[task.setvariable variable=buildConfiguration;]Release"
     }
-    If (contains("$(Build.SourceBranch)", "refs/heads/release-")) {
+    If ("$(Build.SourceBranch)" -startsWith "refs/heads/release-") {
       Write-Host "##vso[task.setvariable variable=buildConfiguration;]Staging"
     }
     
